# wake-on-lan

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
src/wol/: __main__.py
